--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ repositories {
         annotationProcessor  group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
         compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
         testAnnotationProcessor  group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
+
+        // https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager
+        implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.8.0'
+
     }
 
 test {
