--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ repositories {
         // https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager
         implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.8.0'
 
+        implementation group: 'org.apache.tika', name: 'tika-core', version: '2.9.1'
+
     }
 
 test {
